force-app/main/default/objects/DCAStagingEvent__e.object
<CustomObject>
    <fields>
        <fullName>BulkProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the record has been bulk processed in the post-merge calculations</description>
        <label>BulkProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <description>Counter value to store the current record count which is to be bulk processed in the post-merge logic.</description>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MergeAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if account is merged</description>
        <label>MergeAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MergeContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if contact is merged</description>
        <label>MergeContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MergeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if user is merged</description>
        <label>MergeUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalContactsToBeBulkProcessed__c</fullName>
        <description>The count of contact records to be bulk processed in the post-merge logic</description>
        <label>TotalContactsToBeBulkProcessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>primaryContactId__c</fullName>
        <description>Primary Contact Id</description>
        <label>primaryContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueId__c</fullName>
        <description>Unique Identifier for a batch of contacts included in the DCA run</description>
        <label>uniqueId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DCAStagingEvent</label>
    <pluralLabel>DCAStagingEvents</pluralLabel>
</CustomObject>